--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --background-precolor: #f5f4fa;
   --accent-topcolor: #000000;
   --button-color: #e5e5e5;
-  --border-cards-color #EEEEEE
+  --border-cardscolor #EEEEEE
 }
 html {
   box-sizing: border-box;
