--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,6 @@ button {
 }
 /* ------------------Header----------------------*/
 .page-header {
-  display: flex;
   border-bottom: 1px solid #ececec;
 }
 .container-head {
@@ -175,13 +174,13 @@ button {
   margin-bottom: 10px;
 }
 .services-item:first-child {
-  margin-right: 15px;
+  margin-left: auto;
 }
 .services-item {
   margin: 0 15px;
 }
 .services-item:last-child {
-  margin-left: 15px;
+  margin-right: auto;
 }
 /* ---------------------------Doing---------------------------- */
 
@@ -282,31 +281,31 @@ button {
   justify-content: center;
   padding-top: 94px;
 }
-/* ------------Portfolio items ------------------------------*/
+/* ------------------------- Portfolio items ------------------------------*/
+
 .container-card {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 0;
-  /* outline: 2px solid red; */
+  outline: 2px solid red;
+  padding-bottom: 94px;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   margin-right: -30px;
-  margin-bottom: 94px;
+  margin-bottom: -30px;
   margin-top: 34px;
 }
 
 .portfolio-list > .pf-item {
-  flex-basis: calc(100% / 3 -30px);
+  flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   margin-bottom: 30px;
   margin-left: 0;
-  border-bottom-color: 1px solid var(--border-cardscolor);
-  /* background-color: tomato; */
-  /* outline: 1px solid teal; */
+  outline: 1px solid teal;
 }
 
 .pf-title {
