--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --accent-topcolor: #000000;
   --button-color: #e5e5e5;
   --border-cardscolor: #eeeeee;
+  --card-set-gap: 30px;
 }
 html {
   box-sizing: border-box;
@@ -292,16 +293,16 @@ button {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  margin-right: calc(-1 * var(--card-set-gap));
+  margin-bottom: calc(-1 * var(--card-set-gap));
   margin-top: 34px;
   /* outline: 1px solid red; */
 }
 
 .portfolio-list > .pf-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
-  margin-bottom: 30px;
+  flex-basis: calc(100% / 3 - var(--card-set-gap));
+  margin-right: var(--card-set-gap);
+  margin-bottom: var(--card-set-gap);
   margin-left: 0;
   border-bottom: 1px solid var(--border-cardscolor);
   /* outline: 1px solid teal; */
